examples/negative/pub_enforcement/violation_transitive/main.kai
import mid

fn main() : Unit / Console {
  print(int_to_string(leaf_private_helper()))
}
